contact form alignment fixes

--- a/asset/css/contact.css
+++ b/asset/css/contact.css
@@ -42,6 +42,11 @@ button {
         width: 100%;
     }
 
+    .contact-container{
+        margin:0;
+        width:100%;
+        padding:5px;
+    }
     .name-container {
         display: block;
         gap: 0;
